Fix responsiveness for header on tablet

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -82,7 +82,7 @@ header .logo-link:hover {
     display: none;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 725px) {
     .mobile-nav-toggle {
         display: block;
         position: absolute;
