--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,3 @@
-
-
 .primary-navigation {
     display: flex;
 }
@@ -37,13 +35,13 @@
     border-radius: 7px;
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 725px) {
     .primary-navigation .mobile-only-link {
         display: none;
     }
     
 }
-@media (max-width: 700px) {
+@media (max-width: 725px) {
     .primary-navigation {
         display: none; 
     }
